Version 1.7.0 [WIP]
-------------------------------------------------------------------------

FEATURES
* get_credentials() and strip_credentials() retrieve and remove user authentication info
from URLs, as appropriate (#64)
* A small performance improvement to parameter-related functions.
* The long-deprecated url_parameters has been removed
* param_get() can retrieve all available parameters.
* get_param(urls, parameter_names = NULL), scan for all available parameters (#82)
* Cases like get_param("http://foo.bar/?field=value&amp;more", "field") retrieve the whole field (#82)
* Cases like get_param("http://foo.bar/?field=value#fragment", "field") don't retrieve the fragment (#82)

BUGS
* url_parse now handles URLs with user auth/ident information in them, stripping it out (#64)
* url_parse now handles URLs that are IPv6 addresses (#65)
* url_parse now handles URLs with @ characters in query fragments
* url_compose now handles URLs with query strings but no paths (#71)
* param_set() can now handle parameters with overlapping names
* url_parse now handles URLs with >6 character schemes (#81)
* param_get() skips the URL fragment and handles values containing "&amp;".

DEVELOPMENT
* Internal API simplified.

Version 1.6.0
-------------------------------------------------------------------------
FEATURES
* Fully punycode encoding and decoding support, thanks to Drew Schmidt.
* param_get, param_set and param_remove are all fully capable of handling NA values.
* component setting functions can now assign even when the previous value was NA.

Version 1.5.2
-------------------------------------------------------------------------

BUGS
* Custom suffix lists were not working properly.

Version 1.5.1
-------------------------------------------------------------------------

BUGS
* Fixed a bug in which punycode TLDs were excluded from TLD extraction (thanks to
  Alex Pinto for pointing that out) #51